fixes station scrolling on iphone 5

--- a/public/stylesheets/media_queries.css
+++ b/public/stylesheets/media_queries.css
@@ -36,12 +36,13 @@
   width: 25px;
   height: 25px;
   border-radius: 25px;
-  margin: 0 10px;
+  margin: 0;
+  margin-right: 10px;
   line-height: 25px;
 }
 
 .destination {
-  width: 232px;
+  width: 242px;
   overflow: scroll;
   text-transform: capitalize;
   position: relative;
